Colab을 통해 생성됨

--- a/0625_파이썬_for문.ipynb
+++ b/0625_파이썬_for문.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM/D38DLAt0SDfm88/QaKj+",
+      "authorship_tag": "ABX9TyPY82X5i+KESUQ6IRHN4o7+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -39,13 +39,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 61,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "jvQz0RQm3h5x",
-        "outputId": "2121bdb1-6552-4925-a65f-d5f059e33ddf"
+        "outputId": "45d6ae5f-cc51-46fb-8e87-34ca1315bbf2"
       },
       "outputs": [
         {
@@ -84,9 +84,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mwfg-m2I45B0",
-        "outputId": "c08cc9ff-ec96-4af0-e9a4-7b58beb9b5cc"
+        "outputId": "2245461c-e7b6-4e66-e686-0f6a673d27cd"
       },
-      "execution_count": 20,
+      "execution_count": 62,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,9 +125,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "LZptf9T85GTh",
-        "outputId": "4bf5f160-97ec-4fce-9cb4-d3e0e6cda917"
+        "outputId": "a522bff7-b1b7-4b79-ecb6-97602a3d313c"
       },
-      "execution_count": 21,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -162,9 +162,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OIoAkyTx5bb9",
-        "outputId": "202e2e47-9c72-4df4-b52a-17b181d0198b"
+        "outputId": "d19c0692-3d8e-4717-99c7-bb487f50073f"
       },
-      "execution_count": 22,
+      "execution_count": 64,
       "outputs": [
         {
           "output_type": "stream",
@@ -196,9 +196,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6dUsQc9Q5lKq",
-        "outputId": "ade58443-18df-4d0b-9679-48c4e1d56200"
+        "outputId": "1588d35c-a534-46a8-ca48-6d48c1cd9ffb"
       },
-      "execution_count": 23,
+      "execution_count": 65,
       "outputs": [
         {
           "output_type": "stream",
@@ -234,9 +234,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "psUgrjER5sm8",
-        "outputId": "c418f822-63d8-4ad1-d6c9-d9b65df6a80e"
+        "outputId": "3fae4237-f97c-4331-af6e-24f0619382d3"
       },
-      "execution_count": 24,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
@@ -270,9 +270,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "RDW8O1yQ51Au",
-        "outputId": "e852e775-51a3-4fc6-a957-0b547bc1e6a1"
+        "outputId": "256ebc4f-3808-4a00-9e7b-f9605dea3b0a"
       },
-      "execution_count": 25,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
@@ -314,9 +314,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "s06I9qps6AWN",
-        "outputId": "70ae4041-4b6d-4e85-f061-0ffcf42c4c77"
+        "outputId": "9f9dccba-2aa7-4f5a-ced1-5102cbf1392d"
       },
-      "execution_count": 26,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -356,9 +356,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "B2MKwWOo6DAn",
-        "outputId": "20596591-54ec-46e1-976b-bfa3eb3ce0ad"
+        "outputId": "9fc3e430-a5d2-4ad9-bc20-1f729b8d44c9"
       },
-      "execution_count": 27,
+      "execution_count": 69,
       "outputs": [
         {
           "output_type": "stream",
@@ -395,9 +395,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5vqvGVij6M7s",
-        "outputId": "114ec61b-2440-4ec6-e4fa-269849c518c1"
+        "outputId": "64840bd5-cc0d-4ae7-8c1d-9888ad7a2388"
       },
-      "execution_count": 28,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "stream",
@@ -435,7 +435,7 @@
       "metadata": {
         "id": "bSCGeevv6V4Q"
       },
-      "execution_count": 29,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -477,9 +477,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VJ3qqEVv6kO-",
-        "outputId": "1937e939-5233-4c00-b19f-a0f52e14ec7e"
+        "outputId": "d951654c-b634-490c-8243-7560ed82571a"
       },
-      "execution_count": 30,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,9 +518,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3pMlM8Jd63Gn",
-        "outputId": "942e6168-6ae7-48d3-b6d1-1515c0956915"
+        "outputId": "2c9fea05-90ac-44ef-de3f-97d0ee3fb275"
       },
-      "execution_count": 31,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,9 +559,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "FH7WIOIX66yK",
-        "outputId": "30026ffb-d753-40ba-9c7f-198a29c7f82e"
+        "outputId": "9024dc02-41e5-42bf-baab-9bc57f1daa9f"
       },
-      "execution_count": 32,
+      "execution_count": 74,
       "outputs": [
         {
           "output_type": "stream",
@@ -600,9 +600,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Nq_sPuyC7C0R",
-        "outputId": "8712b8b6-21c6-42a2-aef3-9b5ee4e2b5eb"
+        "outputId": "83c85bc3-425f-44b0-a978-65d669249ff7"
       },
-      "execution_count": 33,
+      "execution_count": 75,
       "outputs": [
         {
           "output_type": "stream",
@@ -636,9 +636,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "49jHmOIJ7Iyv",
-        "outputId": "004ddf6c-c2ee-4c7a-9f9f-da22e897cbaa"
+        "outputId": "e001b215-aa52-4cc5-f704-4aed7f7ba446"
       },
-      "execution_count": 34,
+      "execution_count": 76,
       "outputs": [
         {
           "output_type": "stream",
@@ -647,6 +647,231 @@
             "급제동\n",
             "감속\n",
             "정상 속도\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##✅ while문을 이용한 자율주행 예제"
+      ],
+      "metadata": {
+        "id": "mEVJAnhq9huW"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🚗 1. 전방 거리 줄어들 때까지 반복 감속"
+      ],
+      "metadata": {
+        "id": "Ll6kxC9S9qnJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "distance = 50  # 초기 전방 거리\n",
+        "\n",
+        "while distance > 30:\n",
+        "    print(\"감속 중... (거리:\", distance, \"m)\")\n",
+        "    distance -= 5  # 점점 가까워짐\n",
+        "\n",
+        "print(\"거리 충분히 가까움 → 유지 주행\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "cdALm5bu9wPo",
+        "outputId": "a98970b5-a46a-4e92-f2b5-66e0981ca58c"
+      },
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "감속 중... (거리: 50 m)\n",
+            "감속 중... (거리: 45 m)\n",
+            "감속 중... (거리: 40 m)\n",
+            "감속 중... (거리: 35 m)\n",
+            "거리 충분히 가까움 → 유지 주행\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🚗 2. 차선이 인식될 때까지 기다리기"
+      ],
+      "metadata": {
+        "id": "XxYhwevY90uK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lane_detected = False\n",
+        "tries = 0\n",
+        "\n",
+        "while not lane_detected and tries < 5:  # 5번까지만 시도\n",
+        "    print(\"차선 인식 시도 중...\")\n",
+        "    tries += 1\n",
+        "    if tries == 3:  # 3번째에 인식됐다고 가정\n",
+        "        lane_detected = True\n",
+        "\n",
+        "print(\"차선 인식 성공!\" if lane_detected else \"차선 인식 실패\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1H9tvGT890ST",
+        "outputId": "fe421cfd-f9b5-4b59-9999-40ecee26f766"
+      },
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "차선 인식 시도 중...\n",
+            "차선 인식 시도 중...\n",
+            "차선 인식 시도 중...\n",
+            "차선 인식 성공!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🚗 3. 신호등이 초록불이 될 때까지 정지"
+      ],
+      "metadata": {
+        "id": "NQlnQXzL9_NS"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "signal = \"red\"\n",
+        "wait = 0\n",
+        "\n",
+        "while signal != \"green\":\n",
+        "    print(\"신호 대기 중... 현재:\", signal)\n",
+        "    wait += 1\n",
+        "    if wait == 3:\n",
+        "        signal = \"green\"  # 3초 후 초록불 됐다고 가정\n",
+        "\n",
+        "print(\"초록불! 출발!\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LLwWSI1D99g-",
+        "outputId": "5565a398-4a11-4510-fdb4-0f3783d2859c"
+      },
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "신호 대기 중... 현재: red\n",
+            "신호 대기 중... 현재: red\n",
+            "신호 대기 중... 현재: red\n",
+            "초록불! 출발!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🚗 4. 차량이 중앙으로 복귀할 때까지 조정"
+      ],
+      "metadata": {
+        "id": "bGEwzF5y-ArX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "offset = -0.5  # 왼쪽으로 치우쳐 있음\n",
+        "\n",
+        "while offset < -0.1:\n",
+        "    print(\"우회전 조향... (offset:\", offset, \")\")\n",
+        "    offset += 0.1  # 점점 중앙으로 이동\n",
+        "\n",
+        "print(\"차선 중앙 복귀 완료\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ZFo8A0op-Eac",
+        "outputId": "9265f206-c3fd-4c3f-d3f9-afe924a13f13"
+      },
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "우회전 조향... (offset: -0.5 )\n",
+            "우회전 조향... (offset: -0.4 )\n",
+            "우회전 조향... (offset: -0.30000000000000004 )\n",
+            "우회전 조향... (offset: -0.20000000000000004 )\n",
+            "우회전 조향... (offset: -0.10000000000000003 )\n",
+            "차선 중앙 복귀 완료\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "🚗 5. 배터리 부족-> 충전까지 대기 후 주행"
+      ],
+      "metadata": {
+        "id": "XCBXSBrc-HpJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "battery = 10  # 배터리 10%부터 시작\n",
+        "\n",
+        "while battery < 20:\n",
+        "    print(\"배터리 부족 → 충전 중... (\", battery, \"% )\")\n",
+        "    battery += 2  # 충전됨\n",
+        "\n",
+        "print(\"충전 완료 → 주행 가능\")\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "uMF-2ZhR-M6m",
+        "outputId": "45564317-5874-46bd-a38e-2dce2c6ad40d"
+      },
+      "execution_count": 81,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "배터리 부족 → 충전 중... ( 10 % )\n",
+            "배터리 부족 → 충전 중... ( 12 % )\n",
+            "배터리 부족 → 충전 중... ( 14 % )\n",
+            "배터리 부족 → 충전 중... ( 16 % )\n",
+            "배터리 부족 → 충전 중... ( 18 % )\n",
+            "충전 완료 → 주행 가능\n"
           ]
         }
       ]
